--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
 <body>
 
   <div class="content">
-    
+
     <h1>Forth Very Creature Sixth Abundantly</h1>
     <p>
       <strong>
-        Genetic hereditary is here, but not genetic testing
+        Genetic is here, but not genetic testing
       </strong>
     </p>
+    <h2>Similar Terms Issue</h2>
+    <p>Firewall, Firewall Software, Network Components, Network Administrator, and network, networking, network alias</p>
 
     <p>Power of Attorney (POA)</p>
     <p>
-      <a href="#"> A link within a paragraph: 
+      <a href="#"> A link within a paragraph:
         Treatment is here, but not evidence based treatment
       </a>
     </p>
@@ -123,7 +125,7 @@
     <p>Moved. Air fruit that lesser own creature. <strong>Life</strong> likeness <strong>you&#39;ll</strong> image our shall. Over sixth called very. Make fourth us, their don&#39;t herb one cattle greater she&#39;d two living. You&#39;re his, life stars whose female Under after said creature shall.</p>
 
   </div>
-  
+
 
   <script src="jquery.min.js"></script>
   <script src="tooltip/tooltip.js"></script>
@@ -143,6 +145,6 @@
   });
 
   </script>
-  
+
 </body>
 </html>
